## Version 3.1.4

* Improve portability of autoools build by using libtool to build the
	etree library.
* Limit build to etree library.

## Version 3.1.3

This version appears to be associated with David Gill (SCEC/USC) adding a
	rudimentary build using autotools. The build assumed a Linux
	operating system.

## Version 3.1.2

"Original" version available from http://www.cs.cmu.edu/~euclid/.