@@ -11,3 +11,8 @@ configure
 *.la
 *.o
 *~
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
