@@ -1,3 +1,11 @@
 # GNU automake config
 
-SUBDIRS = libsrc
+SUBDIRS = \
+	libsrc \
+	examples \
+	tools \
+	output4d \
+	cvm
+
+
+# End of file
